--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@unform/core": "^2.1.0",
+    "@unform/web": "^2.1.0",
     "axios": "^0.19.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -16,7 +18,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.8.3",
-    "styled-components": "^5.1.0"
+    "react-transition-group": "^4.4.1",
+    "styled-components": "^5.1.0",
+    "unform": "^1.2.3",
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "react-scripts start",
